# palaver-math-pypi

./: .gitignore  AGENT.md  README.md  pyproject.toml
memory/: JOURNAL.md
src/palaver_math.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/palavermath/: __init__.py  coalition.py  consensus.py  convergence.py  dialogue.py  session.py
tests/: test_all.py
