[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palaver-math"
version = "0.1.0"
description = "Consensus mathematics from West African dialogue traditions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "SuperInstance" }]
keywords = ["consensus", "mathematics", "dialogue", "palaver", "west-african"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Repository = "https://github.com/SuperInstance/palaver-math-pypi"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
